--- a/index.html
+++ b/index.html
@@ -5,23 +5,19 @@
 </head>
 <body>
     <header>
-        <h1>欢迎来到我的个人主页</h1>
+        <h1>程婧祎</h1>
     </header>
 
     <main>
         <section>
-            <h2>关于我</h2>
-            <!-- 在这里写一些关于您的简介信息 -->
-        </section>
-
-        <section>
             <h2>我的项目</h2>
-            <!-- 在这里列出您的项目，并添加链接和描述 -->
+            - [GAMES101—Rust](https://github.com/cjyyiii/GAMES101) - 2023暑假PPCA第三四周任务
+            - [Ray_tracing](https://github.com/cjyyiii/Ray_tracing) - 2023暑假PPCA第一二周任务
         </section>
     </main>
 
     <footer>
-        <!-- 在这里添加页脚信息，如联系方式等 -->
+        邮箱：cjy_yiii@sjtu.edu.cn
     </footer>
 </body>
 </html>
