--- a/index.html
+++ b/index.html
@@ -11,13 +11,24 @@
     <main>
         <section>
             <h2>我的项目</h2>
-            - [GAMES101—Rust](https://github.com/cjyyiii/GAMES101) - 2023暑假PPCA第三四周任务
-            - [Ray_tracing](https://github.com/cjyyiii/Ray_tracing) - 2023暑假PPCA第一二周任务
+            <div class="project">
+        <h3>项目1：[Ray_tracing]</h3>
+        <p>项目描述：[2023PPCA一二周任务]</p>
+        <a href="[https://github.com/cjyyiii/Ray_tracing]" target="_blank">https://github.com/cjyyiii/Ray_tracing</a>
+    </div>
+          <div class="project">
+        <h3>项目2：[GAMES101]</h3>
+        <p>项目描述：[2023PPCA三四周任务]</p>
+        <a href="[https://github.com/cjyyiii/GAMES101]" target="_blank">https://github.com/cjyyiii/GAMES101</a>
+    </div>  
         </section>
     </main>
 
     <footer>
-        邮箱：cjy_yiii@sjtu.edu.cn
+       <div class="contact-info">
+        <p><strong>邮箱：</strong>[cjy_yiii@sjtu.edu.cn]</p>
+        <p><strong>电话：</strong>[13676829047]</p>
+    </div>
     </footer>
 </body>
 </html>
