--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     </main>
 
     <footer>
-       <div class="contact-info">
+       <h2>联系方式</h2>
+        <div class="contact-info">
         <p><strong>邮箱：</strong>[cjy_yiii@sjtu.edu.cn]</p>
         <p><strong>电话：</strong>[13676829047]</p>
     </div>
