--- a/index.html
+++ b/index.html
@@ -2,6 +2,32 @@
 <html>
 <head>
     <title>程婧祎 - 个人主页</title>
+    <style>
+       body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            background-image: url('[https://github.com/cjyyiii/cjy.github.io/blob/main/images/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20230630205759.jpg?raw=true]');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+        }
+        h1 {
+            color: #007BFF;
+        }
+        p {
+            margin-bottom: 10px;
+        }
+        .contact-info {
+            margin-top: 20px;
+            border-top: 1px solid #ccc;
+            padding-top: 10px;
+        }
+        .project {
+            margin-bottom: 20px;
+        }
+        
+    </style>
 </head>
 <body>
     <header>
